# POO2-Riviere

./: CMakeLists.txt  Controller.cpp  Controller.h  main.cpp
Containers/: Bank.cpp  Bank.h  Boat.cpp  Boat.h  Container.cpp  Container.h
People/: Person.cpp  Person.h  Policeman.cpp  Policeman.h  Robber.cpp  Robber.h
People/Family/: Child.cpp  Child.h  Daughter.cpp  Daughter.h  Father.cpp  Father.h  Mother.cpp  Mother.h  Parent.cpp  Parent.h  Son.cpp  Son.h
